@startuml StageGame

package game {
    package ga_stage {
        package ga_parser {
            class UnderStageParser {
                +constructor(tile,chara,event)
                #makeEntityFactory() : EntityFactory <<override>>
                #makePhysicalResponse() : CollisionResponse <<override>>
            }
        }

        package ga_physics {
            class UnderRepulsionResponse {
                #asGround(entity,dirX,dirY) : boolean
                +collisionResponse(data,dt) <<override>>
            }
        }
    }
}

package game {
}

package under {
    package base {
        package stage {
            package physics {
                abstract CollisionResponse
                package body {
                    abstract RigidBody
                }
                package material {
                    abstract Material
                }
                package collider {
                    abstract Collider
                    abstract CollisionData
                }
                package entity {
                    abstract InfluentialEntity
                    abstract MutableEntity
                }
            }
        }
    }
    package extend {
        package ex_stage {
            package ex_parser {
                class JSONStageParser
                class JSONEntityFactory
            }
        }
    }
}

package game {
    package ga_event {
        class UnderEventBuilder
    }
    package ga_stage {
        package ga_parser {
            class UnderTileBuilder
            class UnderCharacterBuilder
        }
    }
}

UnderStageParser ..> UnderTileBuilder : Generate
UnderStageParser ..> UnderCharacterBuilder : Generate
UnderStageParser ..> UnderEventBuilder : Generate
UnderStageParser ..> UnderRepulsionResponse : Generate
JSONEntityFactory <.. UnderStageParser : Generate

RigidBody <.. UnderRepulsionResponse : Get and enforce
Material <.. UnderRepulsionResponse : Get
Collider <.. UnderRepulsionResponse : Get
InfluentialEntity <.. UnderRepulsionResponse : Get
MutableEntity <.. UnderRepulsionResponse : Get
CollisionData <.. UnderRepulsionResponse : Get

JSONStageParser <|-- UnderStageParser
CollisionResponse <|.... UnderRepulsionResponse

@enduml
